# PFE_Transport_Chien_Robot

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  connect_to_wifi.txt  test.py
install/: local_setup.sh  setup.sh
install/go1_description/share/go1_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go1_description/share/go1_description/cmake/: go1_descriptionConfig.cmake
install/ros2_unitree_legged_msgs/include/ros2_unitree_legged_msgs/ros2_unitree_legged_msgs/msg/: high_state.hpp  imu.h  low_state.h  low_state.hpp  motor_cmd.hpp  motor_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/ros2_unitree_legged_msgs/include/ros2_unitree_legged_msgs/ros2_unitree_legged_msgs/msg/detail/: bms_cmd__functions.c  bms_cmd__functions.h  bms_cmd__rosidl_typesupport_fastrtps_c.h  bms_cmd__struct.h  (+77 more)
install/ros2_unitree_legged_msgs/share/ament_index/resource_index/rosidl_interfaces/: ros2_unitree_legged_msgs
install/ros2_unitree_legged_msgs/share/ros2_unitree_legged_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_unitree_legged_msgs/share/ros2_unitree_legged_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_ros2_unitree_legged_msgs__rosidl_generator_cExport-noconfig.cmake  export_ros2_unitree_legged_msgs__rosidl_generator_cExport.cmake  export_ros2_unitree_legged_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_ros2_unitree_legged_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  ros2_unitree_legged_msgsConfig.cmake  ros2_unitree_legged_msgs__rosidl_typesupport_cppExport-noconfig.cmake  ros2_unitree_legged_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros2_unitree_legged_msgs__rosidl_typesupport_introspection_cExport.cmake  ros2_unitree_legged_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ros2_unitree_legged_msgs/share/ros2_unitree_legged_msgs/msg/: BmsState.idl  Cartesian.idl  HighState.idl  IMU.idl  LED.idl
install/unitree_gazebo/share/unitree_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree_gazebo/share/unitree_gazebo/cmake/: ament_cmake_export_dependencies-extras.cmake  unitree_gazeboConfig.cmake
install/unitree_gazebo/share/unitree_gazebo/launch/: normal.py
install/unitree_legged_real/lib/unitree_legged_real/: custom_gait  jsp_high  jsp_low  ros2_position_example  ros2_udp  ros2_walk_example  udp_high  udp_low
install/unitree_legged_real/share/unitree_legged_real/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree_nav/lib/unitree_nav/: cmd_processor  nav_to_pose
install/unitree_nav/share/unitree_nav/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree_nav/share/unitree_nav/cmake/: unitree_navConfig.cmake
install/unitree_nav_interfaces/include/unitree_nav_interfaces/unitree_nav_interfaces/srv/: nav_to_pose.h  set_body_rpy.hpp
install/unitree_nav_interfaces/share/ament_index/resource_index/rosidl_interfaces/: unitree_nav_interfaces
install/unitree_nav_interfaces/share/unitree_nav_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree_nav_interfaces/share/unitree_nav_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_unitree_nav_interfaces_srv__rosidl_generator_cExport.cmake  export_unitree_nav_interfaces_srv__rosidl_generator_cppExport.cmake  export_unitree_nav_interfaces_srv__rosidl_generator_pyExport-noconfig.cmake  export_unitree_nav_interfaces_srv__rosidl_generator_pyExport.cmake  export_unitree_nav_interfaces_srv__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  unitree_nav_interfaces_srv__rosidl_typesupport_cExport-noconfig.cmake  unitree_nav_interfaces_srv__rosidl_typesupport_cppExport-noconfig.cmake  unitree_nav_interfaces_srv__rosidl_typesupport_introspection_cExport-noconfig.cmake  unitree_nav_interfaces_srv__rosidl_typesupport_introspection_cExport.cmake  unitree_nav_interfaces_srv__rosidl_typesupport_introspection_cppExport-noconfig.cmake  unitree_nav_interfaces_srv__rosidl_typesupport_introspection_cppExport.cmake
install/unitree_nav_launch_module/share/unitree_nav_launch_module/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
scripts/: build-project.sh  install-lcm.sh  install-opencv.sh  install-ros-packages.sh  setup-ros-repo.sh  setup.sh
src/: .gitmodules
src/unitree_camera/: CMakeLists.txt  package.xml
src/unitree_camera/config/: camera_all_config.yaml
src/unitree_camera/include/: depth_publisher.hpp
src/unitree_camera/launch/: body_publishers.launch  camera_publisher.launch  head_publishers.launch
src/unitree_camera/src/: camera_publisher.cpp  depth_publisher.cpp  image_publisher.cpp  point_cloud_node.cpp
src/unitree_camera/unitree_camera/config/: stereo_camera_config0.yaml  stereo_camera_config1.yaml
src/unitree_nav/: CMakeLists.txt  package.xml
src/unitree_nav/launch/: go1_bringup.launch  mapping.launch  unitree_slam.launch
src/unitree_nav/unitree_nav/: package.xml
src/unitree_republisher/: CMakeLists.txt  package.xml
src/unitree_republisher/config/: odom.rviz
src/unitree_republisher/launch/: imu_odom.launch
src/unitree_republisher/src/: imu_odom_pub.cpp
src/unitree_ros2/go1_description/config/: robot_control.yaml
src/unitree_ros2/go1_description/xacro/: depthCamera.xacro  gazebo.xacro
src/unitree_ros2/unitree_gazebo/: CMakeLists.txt  package.xml
src/unitree_ros2/unitree_gazebo/launch/: normal.py
src/unitree_ros2/unitree_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
(+31 files in other folders)
