<?xml version="1.0"?>
<package format="2">
    <name>unitree_gazebo</name>
    <version>1.0.0</version>
    <description>The unitree_gazebo package. It can start a gazebo simulation</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>ros2_unitree_legged_msgs</depend>
    <depend>controller_manager</depend>
    <!-- <depend>joint_state_controller</depend> -->
    <depend>robot_state_publisher</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <build_type>ament_cmake</build_type>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
